fix issue causing column wrap 100% not working

--- a/src/blocks/column/styles/editor.scss
+++ b/src/blocks/column/styles/editor.scss
@@ -414,12 +414,6 @@
   }
 }
 
-@media only screen and (min-width: 1024px) {
-  .editor-styles-wrapper .guten-column {
-    flex: 1 1 !important
-  }
-}
-
 .guten-column-gap-default .guten-column {
   .components-resizable-box__handle-left {
     left: -21.5px;
